# bungalow-hs

./: CHANGELOG.md  LICENSE  README.md  bungalow.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Bungalow.hs  MyLib.hs
src/Bungalow/: Database.hs  Row.hs  Table.hs
test/: Main.hs
