cabal-version:   3.0
name:            bungalow
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Bungalow
        Bungalow.Row
        Bungalow.Table

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.2,
        binary,
        bytestring,
        containers,
        parsec

executable bungalow
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.2,
        bungalow

test-suite bungalow-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.2,
        bungalow
